--- a/mbp_pro_react_app/package.json
+++ b/mbp_pro_react_app/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^1.6.0",
     "react-crossfade-image": "^1.2.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.6.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slideshow-image": "^3.4.6",
