--- a/back_end/package.json
+++ b/back_end/package.json
@@ -5,6 +5,7 @@
   "author": "inonbr@gmail.com",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^9.0.2",
